--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,7 @@ matrix:
   fast_finish: true
 
 environment:
+  LINKER: "lld-link.exe"
   PYTHON3: "C:\\Python37-x64\\python.exe"
   # The appveyor image we use has a pretty huge set of things installed... we make the
   # initial PATH something sane so we know what to expect
@@ -30,9 +31,9 @@ environment:
     C:\\Program Files\\Git\\cmd;\
     C:\\Program Files\\Git\\usr\\bin;\
     C:\\Program Files\\AppVeyor\\BuildAgent;"
+
   CC: "clang-cl.exe"
   CXX: "clang-cl.exe"
-  LINKER: "lld-link.exe"
 
   VCVARSALL_PATH: C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build
 
@@ -40,6 +41,8 @@ environment:
     - TARGET: i686-pc-windows-msvc
       CROSS_COMPILE: 1
     - TARGET: x86_64-pc-windows-msvc
+    - TARGET: x86_64-pc-windows-msvc
+      FEATURES: "--features debugmozjs"
 
 # Uncomment to enable RDP & wait for exit.  Connection info will be printed in the log.
 #init:
@@ -52,6 +55,7 @@ install:
   - set BUILD_ENV=msvc
   - ps: Start-FileDownload "http://servo-rust.s3.amazonaws.com/build/MozillaBuildSetup-2.2.0.exe"
   - ps: .\MozillaBuildSetup-2.2.0.exe /S | Out-Null
+  - appveyor-retry choco install llvm --version=8.0.1
   - appveyor-retry appveyor DownloadFile https://win.rustup.rs/ -FileName rustup-init.exe
   - rustup-init.exe -y --default-host=x86_64-pc-windows-msvc
   - set PATH=%PATH%;C:\Users\appveyor\.cargo\bin
@@ -66,5 +70,6 @@ build_script:
   - echo PATH %PATH%
   - echo MOZTOOLS_PATH %MOZTOOLS_PATH%
   - cd %APPVEYOR_BUILD_FOLDER%
-  - cargo build --verbose --verbose --target %TARGET%
-  - if "%CROSS_COMPILE%" == "" cargo test --verbose --verbose --target %TARGET%
+  - set MOZJS_FORCE_RERUN=1
+  - cargo build --verbose --verbose --target %TARGET% %FEATURES%
+  - if "%CROSS_COMPILE%" == "" cargo test --verbose --verbose --target %TARGET% %FEATURES%
