--- a/src/glue_wrappers.in
+++ b/src/glue_wrappers.in
@@ -8,11 +8,13 @@ wrap!(glue: pub fn WrapperNew(aCx: *mut JSContext, aObj: HandleObject, aHandler:
 wrap!(glue: pub fn NewWindowProxy(aCx: *mut JSContext, aObj: HandleObject, aHandler: *const ::libc::c_void) -> *mut JSObject);
 wrap!(glue: pub fn RUST_JSID_IS_INT(id: HandleId) -> bool);
 wrap!(glue: pub fn RUST_JSID_TO_INT(id: HandleId) -> i32);
+wrap!(glue: pub fn int_to_jsid(i: i32, id: MutableHandleId));
 wrap!(glue: pub fn RUST_JSID_IS_STRING(id: HandleId) -> bool);
 wrap!(glue: pub fn RUST_JSID_TO_STRING(id: HandleId) -> *mut JSString);
 wrap!(glue: pub fn RUST_SYMBOL_TO_JSID(sym: *mut Symbol, id: MutableHandleId));
-wrap!(glue: pub fn int_to_jsid(i: i32, id: MutableHandleId));
+wrap!(glue: pub fn RUST_JSID_IS_VOID(id: HandleId) -> bool);
 wrap!(glue: pub fn RUST_INTERNED_STRING_TO_JSID(cx: *mut JSContext, str: *mut JSString, id: MutableHandleId));
-wrap!(glue: pub fn AppendToAutoIdVector(v: *mut AutoIdVector, id: HandleId) -> bool);
+wrap!(glue: pub fn GetIdVectorAddress(v: *mut PersistentRootedIdVector) -> *mut ::libc::c_void);
+wrap!(glue: pub fn AppendToIdVector(v: MutableHandleIdVector, id: HandleId) -> bool);
 wrap!(glue: pub fn JS_GetPromiseResult (promise: HandleObject, dest: MutableHandleValue));
 wrap!(glue: pub fn EncodeStringToUTF8(cx: *mut JSContext, str: HandleString, cb: fn(*const c_char)));
